--- a/androidansiapp/build.gradle
+++ b/androidansiapp/build.gradle
@@ -2,13 +2,17 @@ plugins {
     id 'com.android.application'
 }
 
+final int androidTargetSdk = // Parse property once
+        Integer.parseInt(project['andorid.targetSdk'] as String)
+
 android {
-    compileSdk 32
+    namespace 'com.fox2code.androidansiapp'
+    compileSdk androidTargetSdk
 
     defaultConfig {
         applicationId "com.fox2code.androidansiapp"
         minSdk 16
-        targetSdk 32
+        targetSdk androidTargetSdk
         versionCode 1
         versionName "1.0"
 
@@ -21,6 +25,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    lintOptions {
+        abortOnError false
+    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -29,10 +36,11 @@ android {
 
 dependencies {
     implementation(project(":library"))
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.6.0'
+    implementation(project(":library-ktx"))
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
