--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,9 @@ android.useAndroidX=true
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+# Update already
+android.disableAutomaticComponentCreation=true
+# Android targt SDK
+andorid.targetSdk=33
+# Library version
+library.version=1.1.0
