--- a/library-ktx/build.gradle
+++ b/library-ktx/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.library'
+    id 'org.jetbrains.kotlin.android'
     id 'maven-publish'
 }
 
@@ -10,8 +11,7 @@ group = 'com.github.Fox2Code.AndoridANSI'
 version = project['library.version'] as String
 
 android {
-    namespace 'com.fox2code.androidansi'
-
+    namespace 'com.fox2code.androidansi.ktx'
     compileSdk androidTargetSdk
 
     defaultConfig {
@@ -29,8 +29,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = '1.8'
     }
     publishing {
         singleVariant('release') {
@@ -41,13 +44,8 @@ android {
 }
 
 dependencies {
-    //noinspection GradleDependency (Newer versions use Kotlin)
-    api 'androidx.annotation:annotation:1.3.0'
-    //noinspection GradleDependency (Version used by Kotlin)
-    api 'org.jetbrains:annotations:13.0'
-    compileOnly('androidx.emoji2:emoji2-views-helper:1.3.0') {
-        transitive = false
-    }
+    api(project(":library"))
+    compileOnly('androidx.appcompat:appcompat:1.6.1')
 }
 
 afterEvaluate {
@@ -57,7 +55,7 @@ afterEvaluate {
             release(MavenPublication) {
                 from components.release
                 groupId = project.group
-                artifactId = 'library'
+                artifactId = 'library-ktx'
                 version = '1.0' // JitPack only support 1.0
             }
         }
