--- a/library-ktx/build.gradle
+++ b/library-ktx/build.gradle
@@ -46,6 +46,7 @@ android {
 dependencies {
     api(project(":library"))
     compileOnly('androidx.appcompat:appcompat:1.6.1')
+    compileOnly('androidx.compose.ui:ui-text:1.4.3')
 }
 
 afterEvaluate {
